<resources>
    <string name="app_name">Green Taxi</string>
    <string name="map_key">AIzaSyA6QI378BHt9eqBbiJKtqWHTSAZxcSwN3Q</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="phone">Phone number</string>
    <string name="login">Login</string>
    <string name="please_enter_code_sent_to">Please Enter Code Sent To</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="failed">Faild</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="points">Points</string>
    <string name="award">Award</string>
    <string name="galleries">Galleries</string>
    <string name="departments">Departments</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="name">Name</string>
    <string name="personal_information">Personal information</string>
    <string name="more">More</string>
    <string name="about_us">About us</string>
    <string name="address">Address</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="update_profile">Update Profile</string>
    <string name="details">Details</string>
    <string name="no_image">No Images</string>
    <string name="wait">Wait</string>
    <string name="user_blocked">User Blocked</string>
    <string name="select_location_on_map">Select Location On Map</string>
    <string name="user_exist">User Exist</string>
    <string name="select">Select</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="not_ava">Not available</string>
    <string name="egp">EGP</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log In</string>
    <string name="verification_code">Verification code</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="user_not_found">User not found</string>
    <string name="getting_location">Getting location...</string>
    <string name="accept">Accept</string>
    <string name="km">Km</string>
    <string name="client_information">Client information</string>
    <string name="delivered">Delivered</string>
    <string name="cancel_order">Cancel</string>
</resources>