<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="phone"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity_login.LoginActivity"

        >

        <LinearLayout
            android:id="@+id/fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/verification_code"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                >
                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_car_wheel"
                    android:padding="2dp"/>
                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center_vertical"/>


            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_code_sent_to"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl"
            app:layout_constraintVertical_bias=".1" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{phone}"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintVertical_bias=".03" />

        <com.chaos.view.PinView
            android:id="@+id/edtCode"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@drawable/pin_view_item"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:cursorColor="@color/colorPrimaryDark"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="40dp"
            app:itemRadius="5dp"
            app:itemSpacing="8dp"
            app:itemWidth="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:layout_constraintVertical_bias=".1"
            app:lineColor="@color/transparent"
            app:lineWidth="0dp"
            app:viewType="rectangle" />


        <LinearLayout
            android:id="@+id/llCounter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edtCode"
            app:layout_constraintStart_toStartOf="@id/edtCode"
            app:layout_constraintTop_toBottomOf="@id/edtCode"
            app:layout_constraintVertical_bias=".06">

            <TextView
                android:id="@+id/tvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="00:00"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary"
            android:minWidth="150dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edtCode"
            app:layout_constraintStart_toStartOf="@id/edtCode"
            app:layout_constraintTop_toBottomOf="@id/llCounter"
            app:layout_constraintVertical_bias=".2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
