<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.app.green_taxi.models.CurrentOrderModel" />



    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="3dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/gray4"
                android:padding="8dp"
                >
                <FrameLayout
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/white"
                        />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_map_pin"
                        android:padding="4dp"
                        android:layout_gravity="center"
                        />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text='@{model.distance+@string/km}'
                    />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text='@{"#"+model.id}'/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_clock"
                    android:padding="3dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/gray5"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@{model.time}"

                    />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_calendar"
                    android:padding="3dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/gray5"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@{model.date}"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pin"
                    android:padding="3dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray5"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@{model.address}"

                    />



            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/client_information"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                >
                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_car_wheel"
                    android:padding="2dp"/>
                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center_vertical"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_user"
                    android:padding="3dp"
                    app:tint="@color/gray3"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray5"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@{model.user_fk.name}"
                    />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_phone"
                    android:padding="3dp"
                    app:tint="@color/gray3"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray5"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@{model.user_fk.phone_code+model.user_fk.phone}"

                    />


                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageView
                    android:id="@+id/imageCopy"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/copy"/>

                <ImageView
                    android:id="@+id/imageCall"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/call3"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />


                <ImageView
                    android:id="@+id/imageWhats"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/whats"

                    />



            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end"
                android:gravity="center_vertical"

                >
                <LinearLayout
                    android:id="@+id/llDone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:background="@drawable/rounded_primary"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_correct"
                        android:padding="3dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/delivered"
                        />
                </LinearLayout>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"/>
                <LinearLayout
                    android:id="@+id/llCancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:background="@drawable/rounded_red"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_delete"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/cancel_order"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>